refactor: sequence 초기화에서 GeneratedValue 체크 - strategy 가 IDENTITY, SEQUENCE 인 엔티티만 초기화